# slc

./: CMakeLists.txt  README.md
doc/: building.md
doc/example_1_hello_slc/: example.md
doc/example_2_variables_and_slc_types/: example.md  variables_and_types.slc
doc/hello_slc_example_1/: example.md  hello_slc.slc
src/canvas/: canvas.c
src/evaluation/: bool.c  bool.cpp  bool.h  canvas.c  canvas.cpp  canvas.h  coordinate.c  coordinate.cpp  coordinate.h  double.c  double.cpp  double.h  draw_stack.c  draw_stack.cpp  draw_stack.h  ellipse.c  ellipse.cpp  ellipse.h  evaluation.c  evaluation.cpp  evaluation.h  evaluation_drawing.c  evaluation_drawing.cpp  evaluation_drawing.h  evaluation_types.c  evaluation_types.cpp  evaluation_types.h  integer.c  integer.cpp  integer.h  line.c  line.cpp  line.h  linked_list.c  linked_list.h  rectangle.c  rectangle.cpp  rectangle.h  string.c  string.cpp  (+4 more)
src/io/: default_output_file.c  default_output_file.cpp  default_output_file.h  read_evaluate_file.c  read_evaluate_file.cpp  read_evaluate_file.h
src/main/: main.c  main.cpp
src/parsing/: parsing.c  parsing.cpp  parsing.h  parsing_ds.c  parsing_ds.cpp  parsing_ds.h
src/shape/: ellipse.c  ellipse.h  line.c  line.h  rectangle.c  rectangle.h
test/: drawing_test.cpp  evaluation.cpp  main.cpp  parsing.cpp  test_helper.cpp  test_helper.h
